--- a/Phonebook/WebUI/Views/Phonebook/Edit.cshtml
+++ b/Phonebook/WebUI/Views/Phonebook/Edit.cshtml
@@ -65,7 +65,7 @@
             count++;
         } while (count < Model.Phones?.Count);
 
-        <div class="form-group">
+        <div class="form-group address_container">
             @Html.LabelFor(model => model.Street.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Street.Name, new { htmlAttributes = new { @class = "form-control" } })
@@ -73,7 +73,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group address_container">
             @Html.LabelFor(model => model.Street.City.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Street.City.Name, new { htmlAttributes = new { @class = "form-control" } })
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group address_container">
             @Html.LabelFor(model => model.Street.City.Country.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Street.City.Country.Name, new { htmlAttributes = new { @class = "form-control" } })
@@ -106,7 +106,8 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
    <script>
  function initialize() {
-        var dp = { lat: 48.473796, lng: 35.017151 };
+     //var dp = $("#Street_Name").text() == undefined? { lat: 48.473796, lng: 35.017151 }:{}
+     var dp = { lat: 48.473796, lng: 35.017151 };
         var map = new google.maps.Map(document.getElementById('map_canvas'), {
             zoom: 17,
             center: dp
@@ -115,7 +116,7 @@
         var geocoder = new google.maps.Geocoder();
         google.maps.event.addListener(map, 'click', function (event) {
             addMarker(event.latLng, map);
-            var add = $(".address_container > input");
+            var add = $(".address_container > div > input");
 
             geocoder.geocode({ 'location': event.latLng }, function (results, status) {
                 if (status === google.maps.GeocoderStatus.OK) {
@@ -131,9 +132,9 @@
 
 
         document.getElementById('submit').addEventListener('click', function () {
-            console.log($(".address_container > input"));
-            var add = $(".address_container > input");
-            var address = add[4].value + "," + add[5].value + "," + add[6].value + "," + add[7].value;
+            var add = $(".address_container > div > input");
+            console.log(add[0].value );
+            var address = add[0].value + "," + add[1].value + "," + add[2].value;
             geocodeAddress(geocoder, map, address);
 
         });
@@ -155,11 +156,6 @@
         geocoder.geocode({ 'address': address }, function (results, status) {
             if (status === google.maps.GeocoderStatus.OK) {
                 resultsMap.setCenter(results[0].geometry.location);
-
-                var add = $(".address_container > input");
-                add[11].value = results[0].geometry.location.lat();
-                add[12].value = results[0].geometry.location.lng();
-
 
                 var marker = new google.maps.Marker({
                     map: resultsMap,
