--- a/Phonebook/WebUI/Views/Shared/_Layout.cshtml
+++ b/Phonebook/WebUI/Views/Shared/_Layout.cshtml
@@ -31,6 +31,11 @@
         </div>
     </div>
     <div class="container body-content">
+        @if (TempData["message"] != null)
+        {
+            <div class="alert alert-success">@TempData["message"]</div>
+        }
+
         @RenderBody()
         <hr />
         <footer>
